ch#4/trips-kv-csidriver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips-deployment
  namespace: api
  labels:
    aadpodidbinding: azure-kv
    deploy: trips
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - image: "registryvzr4937.azurecr.io/trips:1.0"
        volumeMounts:
        - name: secrets
          mountPath: "/secrets"
          readOnly: true
        imagePullPolicy: Always
        name: trips
        livenessProbe:
          httpGet:
            path: /api/trips/healthcheck
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /api/trips/healthcheck
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
          - containerPort: 80
            name: http
            protocol: TCP
          - containerPort: 443
            name: https
            protocol: TCP
      volumes:
          - name: secrets
            csi:
              driver: secrets-store.csi.k8s.io
              readOnly: true
              volumeAttributes:
                secretProviderClass: "secret-provider-kv"
              nodePublishSecretRef:
                name: secrets-store-creds
---
apiVersion: v1
kind: Service
metadata:
  name: trips-svc
  namespace: api
spec:
  type: ClusterIP
  selector:
    app: trips
  ports:
    - protocol: TCP
      name: trips-http
      port: 80
      targetPort: 80
    - protocol: TCP
      name: trips-https
      port: 443
      targetPort: 443
