ch#4/user-java-kv-csidriver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userjava-deployment
  namespace: api
  labels:
    #aadpodidbinding: azure-kv
    deploy: userjava
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userjava
  template:
    metadata:
      labels:
        app: userjava
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - image: "registryvzr4937.azurecr.io/user-java:1.0"
        volumeMounts:
        - name: secrets
          mountPath: "/secrets"
          readOnly: true
        imagePullPolicy: Always
        name: userjava
        ports:
          - containerPort: 80
            name: http
            protocol: TCP
          - containerPort: 443
            name: https
            protocol: TCP
      volumes:
          - name: secrets
            csi:
              driver: secrets-store.csi.k8s.io
              readOnly: true
              volumeAttributes:
                secretProviderClass: "secret-provider-kv"
              nodePublishSecretRef:
                name: secrets-store-creds

---
apiVersion: v1
kind: Service
metadata:
  name: userjava-svc
  namespace: api
spec:
  type: ClusterIP
  selector:
    app: userjava
  ports:
    - protocol: TCP
      name: userjava-http
      port: 80
      targetPort: 80
    - protocol: TCP
      name: userjava-https
      port: 443
      targetPort: 443
