ch#4/userprofile-kv-csidriver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
  namespace: api
  labels:
    #aadpodidbinding: azure-kv
    deploy: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - image: "registryvzr4937.azurecr.io/userprofile:1.0"
        volumeMounts:
        - name: secrets
          mountPath: "/secrets"
          readOnly: true
        imagePullPolicy: Always
        name: user
        ports:
          - containerPort: 80
            name: http
            protocol: TCP
          - containerPort: 443
            name: https
            protocol: TCP
      volumes:
          - name: secrets
            csi:
              driver: secrets-store.csi.k8s.io
              readOnly: true
              volumeAttributes:
                secretProviderClass: "secret-provider-kv"
              nodePublishSecretRef:
                name: secrets-store-creds

---
apiVersion: v1
kind: Service
metadata:
  name: user-svc
  namespace: api
spec:
  type: ClusterIP
  selector:
    app: user
  ports:
    - protocol: TCP
      name: user-http
      port: 80
      targetPort: 80
    - protocol: TCP
      name: user-https
      port: 443
      targetPort: 443
