ch#4/api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/rewrite-target: /static/$2
  name: api-ingress
  namespace: api
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: poi-svc
          servicePort: 80
        path: /api/poi/healthcheck
      - backend:
          serviceName: poi-svc
          servicePort: 80
        path: /api/poi
      - backend:
          serviceName: trips-svc
          servicePort: 80
        path: /api/trips/healthcheck
      - backend:
          serviceName: trips-svc
          servicePort: 80
        path: /api/trips
      - backend:
          serviceName: user-svc
          servicePort: 80
        path: /api/user/healthcheck
      - backend:
          serviceName: user-svc
          servicePort: 80
        path: /api/user
      - backend:
          serviceName: userjava-svc
          servicePort: 80
        path: /api/user-java/healthcheck
      - backend:
          serviceName: userjava-svc
          servicePort: 80
        path: /api/user-java
