ch#4/web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/rewrite-target: /static/$2
  name: tripviewer-ingress
  namespace: web
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: tripviewer-svc
          servicePort: 80
        path: /
